[package]
name = "hydra"
version = "0.1.0"
authors = ["Author pxp.phillips@gmail.com"]
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
strip = true

[lib]
crate-type = ["cdylib", "staticlib"]
bench = false

[dependencies]
futures = "0.3.32"
janetrs = { version = "0.8.0", default-features = false, features = ["std", "unicode"] }
libsql = "0.9.30"

[features]
default = ["system-janet"]
## Feature to link to system Janet
# If the version of the system Janet if different from the version the JanetRS header comes from, you can use the `system feature flag`
system-janet = ["janetrs/system"]
